samples/_failures_safe/1761400026_ac20fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c7a974e.c: In function ‘print_high_severity_entries’:
./samples/SAFE/__tmp_8c7a974e.c:136:5: error: expected declaration or statement at end of input
  136 |     int found = 0;
      |     ^~~
